# nuklear-buildscripts

./: Makefile.am  configure.ac
demo/glfw_opengl3/: Makefile.am  lib.c
